syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/notblinkyet/crud_gRPC/pkg;crud";

package crud;

message Task {
    string title = 1;
    string description = 2;
    string status = 3;
}

message Id {
    int64 id = 1;
}

message Tasks {
    repeated Task tasks = 1;
}

message UpdateResponse {
    int64 id = 1;
    Task task = 2;
}

service CrudService {
    rpc Create(Task) returns (Id);
    rpc IdRead(Id) returns (Task);
    rpc AllRead(google.protobuf.Empty) returns (Tasks);
    rpc Update(UpdateResponse) returns (google.protobuf.Empty);
    rpc Delete(Id) returns (google.protobuf.Empty);
}